--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "lucide-react": "^0.299.0",
     "next": "14.0.4",
     "next-cloudinary": "^5.16.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.10.4",
     "stripe": "^14.11.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
